# urdu-ocr-text-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  FAQs.md  QUICKSTART.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  .gitignore  README.md  download-models.sh  requirements.txt  start-server.sh
backend/v2/: .env.example  CHANGELOG.md  README.md  __init__.py  config.py  main.py
backend/v2/engine/: loader.py  metrics.py  pipeline.py  text_cleaner.py
backend/v2/middleware/: __init__.py  auth.py  logging.py  metrics.py  rate_limit.py
backend/v2/models/: __init__.py  ocr.py  pdf.py
backend/v2/routes/: __init__.py  analysis.py  export.py  ocr.py  pdf.py  realtime.py  spell_check.py  system.py
backend/v2/scripts/: README.md  annotate_images.py  batch_ocr.py  benchmark.py  check_setup.py  compare_models.py  convert_images.py  diagnose_cuda.py  export_all.py  extract_pdf_images.py  full_pipeline.py  install_deps.py  merge_texts.py  ocr_image.py  ocr_pdf.py  (+3 more)
frontend/: .env.example  .env.sample  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: README.md  run-all-tests.js  shared.js  test-export-routes.js  test-ocr-routes.js  test-pdf-routes.js  test-realtime-routes.js  test-system-routes.js
mcp-server/: README.md  _check_api.py  _check_types.py  _check_version.py  _test_import.py  _test_verify.py  pyproject.toml  server.py  test_server.py
scripts/: deploy.sh  run.sh  setup.sh  test.sh
(+67 files in other folders)
