[project]
name = "urdu-ocr-mcp-server"
version = "1.0.0"
description = "MCP server for End-to-End Urdu OCR Backend API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
urdu-ocr-mcp = "server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
